# MeowKit

./: BUG_REPORT.md  README.md  navbar.html
3. sd/badusb/: notepad_Meow.txt  notepad_hello_world.txt
3.sd/badusb/: notepad_Meow.txt  notepad_hello_world.txt
4.source code/: LICENSE.txt  platformio.ini
4.source code/src/: MeowKit.cpp  MeowKit.h  main.cpp
4.source code/src/app/: app.h
4.source code/src/app/air_mouse/: air_mouse.cpp  air_mouse.h
4.source code/src/app/app_template/: DigitalRainAnimation.hpp  app_template.cpp  app_template.h
4.source code/src/app/bad_usb/: bad_usb.cpp  bad_usb.h
4.source code/src/app/ble_beacon/: ble_beacon.cpp  ble_beacon.h
4.source code/src/app/game/: dino.cpp  dino.h
4.source code/src/app/launcher/: launcher.cpp  (+5 more)
4.source code/src/bsp/: config.h  devices.cpp  devices.h
4.source code/src/luaEngine/: luaDeviceLib.cpp  luaDeviceLib.h  luaEngine.cpp  luaEngine.h  luaSDK.c  luaSDK.h  luaScriptManager.cpp  luaScriptManager.h  luaTest.c  luaTest.h
4.source code/src/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Apps_Menu_One.c  ui_Apps_Menu_Three.c  ui_Apps_Menu_Two.c  ui_Clock.c  ui_Control_Center.c  ui_Home.c  ui_SD_Card.c  ui_WiFi.cpp  ui_events.c  ui_events.h  ui_font_clock_data.c  ui_font_clock_time.c  ui_font_name.c  ui_img_aichat_png.c  ui_img_airmouse_png.c  ui_img_badusb_png.c  ui_img_ble_beacon_png.c  ui_img_digitalrain_png.c  ui_img_dino_png.c  ui_img_icon_volume_png.c  ui_img_ir_png.c  ui_img_led_martrix_png.c  ui_img_led_png.c  ui_img_mac_png.c  ui_img_music_png.c  ui_img_nfc_png.c  ui_img_pcmontior_png.c  ui_img_retrotv_png.c  ui_img_ui_app_bg_png.c  ui_img_ui_app_dot_green_png.c  ui_img_ui_app_dot_white_png.c  ui_img_ui_app_navigation_png.c  ui_img_ui_clock_bg_png.c  ui_img_ui_clock_navigation_png.c  ui_img_ui_control_bar_empty_png.c  ui_img_ui_control_ble_off_png.c  (+23 more)
(+63 files in other folders)
