SET(SOURCES ui_Home.c
    ui_Clock.c
    ui_SD_Card.c
    ui_Control_Center.c
    ui_WiFi.c
    ui_Apps_Menu_One.c
    ui_Apps_Menu_Two.c
    ui_Apps_Menu_Three.c
    ui_APPS_IR.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_ui_home_bg_png.c
    ui_img_ui_home_navigation_png.c
    ui_img_ui_home_sd_off_png.c
    ui_img_ui_home_sd_on_png.c
    ui_img_ui_home_power_red_png.c
    ui_img_ui_home_power_green_png.c
    ui_img_ui_clock_bg_png.c
    ui_img_ui_clock_navigation_png.c
    ui_img_ui_normal_bg_png.c
    ui_img_ui_normal_list_png.c
    ui_img_ui_sd_navigation_png.c
    ui_img_ui_normal_btn_a_png.c
    ui_img_ui_normal_btn_b_png.c
    ui_img_ui_control_bar_empty_png.c
    ui_img_ui_control_light_png.c
    ui_img_icon_volume_png.c
    ui_img_ui_control_ble_off_png.c
    ui_img_ui_control_lock_off_png.c
    ui_img_ui_control_setting_png.c
    ui_img_ui_control_inf_png.c
    ui_img_ui_control_power_png.c
    ui_img_ui_control_wifi_on_png.c
    ui_img_ui_wifi_off_png.c
    ui_img_ui_app_bg_png.c
    ui_img_ui_app_navigation_png.c
    ui_img_ble_beacon_png.c
    ui_img_wifispam_png.c
    ui_img_badusb_png.c
    ui_img_ir_png.c
    ui_img_aichat_png.c
    ui_img_led_png.c
    ui_img_ui_app_dot_green_png.c
    ui_img_ui_app_dot_white_png.c
    ui_img_airmouse_png.c
    ui_img_dino_png.c
    ui_img_music_png.c
    ui_img_pcmontior_png.c
    ui_img_vu_meter_png.c
    ui_img_retrotv_png.c
    ui_img_led_martrix_png.c
    ui_img_webserial_png.c
    ui_img_mac_png.c
    ui_img_digitalrain_png.c
    ui_img_nfc_png.c
    ui_img_wifitv_png.c
    ui_img_ui_ir_icon_connected_png.c
    fonts/ui_font_clock_data.c
    fonts/ui_font_clock_time.c
    fonts/ui_font_name.c)

add_library(ui ${SOURCES})
